# data-project-ecommerce

./: .gitignore  LICENSE  README.md  compose.yml  pyproject.toml
dbt_ecommerce_project/: dbt_project.yml
dbt_ecommerce_project/models/staging/olist/: _olist__models.yml  _olist__sources.yml  stg_olist__orders.sql  stg_olist_customers.sql
src/: extract.py  load.py  main.py
src/db/: db.py
