[project]
name = "ecommerce-datawarehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.5.0",
    "dbt-bigquery>=1.10.3",
    "dbt-core>=1.10.15",
    "google-cloud-bigquery>=3.39.0",
    "kaggle>=1.8.2",
    "pandas>=2.3.3",
    "pandas-gbq>=0.32.0",
    "python-dotenv>=1.2.1",
]
